Alignement correct des titres de l'accueil.
- Ils sont reconstruits avec flex.
- À bas les flottants.
- Qu'ils coûlent.

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -170,9 +170,21 @@
         }
     }
 
-    .home-heading.heading-white {
-        color: $white;
-        border-bottom-color: $white;
+    .home-heading {
+        display: flex;
+
+        &.heading-white {
+            color: $white;
+            border-bottom-color: $white;
+        }
+
+        span {
+            flex: 2;
+        }
+
+        a.btn {
+            float: none;
+        }
     }
 }
 
